# mcpstat

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yaml
docs/: api.md  configuration.md  index.md  latency-tracking.md  quickstart.md  token-tracking.md
examples/: example_server.py  minimal_server.py
mcpstat/: __init__.py  core.py  database.py  logging.py  prompts.py  tools.py  utils.py
tests/: conftest.py  test_documentation.py  test_mcpstat.py
